# summarize

./: .gitignore  README.md  justfile  pyproject.toml
summarize/: __main__.py
